<resources>
    <string name="app_name">Adheber</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_name">Name must be >10 characters</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_confirm">No coinciden ambos passwords </string>
    <string name="other_method">Usar otro metodo</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Nombre</string>
    <string name="client_id">576077015837-oo8f4m3k7irh4dduek0pkpmig7i423ok.apps.googleusercontent.com</string>
</resources>